Fix overlapping layout and responsive issues

--- a/sec6.css
+++ b/sec6.css
@@ -72,12 +72,14 @@
     span{
         font-size: 20px;
         font-weight: 600;
-        top:10px;
+        margin-top:250px;
+        margin-bottom:50px;
     }
     h1{
         font-size: 50px;
         font-weight: 600;
-        top:30px;
+        margin-top:30px;
+        margin-bottom:50px;
     }
     .sec-7-1{
         margin-top: 100px;
